# is-replicant

./: .gitignore  README.MD  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
api/: Dockerfile  requirements.txt
api/app/: main.py
api/app/api/: dependencies.py
api/app/api/endpoints/: admin.py  text_analysis.py
api/app/core/: config.py  security.py
api/app/db/: models.py  session.py
api/app/schemas/: text.py
api/app/services/: text_analysis.py
db/: Dockerfile  docker-entrypoint.sh  entrypoint.sh  init.sql  populate_db.py  populate_db.sh
db/data/: phrases.json  words.json
